--- a/benefitstips.html
+++ b/benefitstips.html
@@ -11,6 +11,9 @@
 
 <body>
     <header>
+        <div class="logo1">
+            <img class="logo" src="images/logo.png" alt="logo">
+        </div>
         <div class="navbar">
             <nav class="navbar1">
                 <a class="pestaña" href="./iindex.html">inicio</a>
@@ -18,10 +21,8 @@
                 <a class="pestaña" href="./contact.html">Contacto</a>
                 <a class="pestaña" href="./information.html">informacion</a>
                 <a class="pestaña" href="#">beneficios y consejos</a>
+                <a class="pestaña" href="./raffle.html">rifa</a>
             </nav>
-            <div class="logo1">
-                <img class="logo" src="images/logo.png" alt="logo">
-            </div>
         </div>
         <article class="contact1">
             <h2 class="contact">Beneficios y consejos</h2>
@@ -40,26 +41,23 @@
             </article>
             <div class="lista">
                 <ol>
-                    <div class="beneficios">
-                        <li>Beneficios
-                            <ul class="li">
-                                <li>Provee grandes cantidades dd calcio</li>
-                                <li>Elaborado sin colorantes artificiales</li>
-                                <li>Colabora con la hidratacion</li>
-                            </ul>
-                        </li>
-                    </div>
-                    <div class="consejos">
-                        <li>consejos
-                            <ul class="li">
-                                <li>Solo consume productos de calidad</li>
-                                <li>Manten el producto siempre congelado</li>
-                                <li>Abrite a una vida sana</li>
-                            </ul>
-                        </li>
-                    </div>
-                </ol>
+                    <li>Beneficios
+                        <ul class="li">
+                            <li>Provee grandes cantidades de calcio</li>
+                            <li>Elaborado sin colorantes artificiales</li>
+                            <li>Colabora con la hidratacion</li>
+                        </ul>
+                    </li>
+                    <li>consejos
+                        <ul class="li">
+                            <li>Solo consume productos de calidad</li>
+                            <li>Manten el producto siempre congelado</li>
+                            <li>Abrite a una vida sana</li>
+                        </ul>
+                    </li>
             </div>
+            </ol>
+        </div>
         </div>
     </main>
     <footer>
