--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,9 @@
 
 <body>
   <header>
+    <div class="logo1">
+      <img class="logo" src="images/logo.png" alt="logo">
+    </div>
     <div class="navbar">
       <nav class="navbar1">
         <a class="pestaña" href="./iindex.html">Inicio</a>
@@ -18,10 +21,8 @@
         <a class="pestaña" href="#">Contacto</a>
         <a class="pestaña" href="./information.html">informacion</a>
         <a class="pestaña" href="./benefitstips.html">beneficios y consejos</a>
+        <a class="pestaña" href="./raffle.html">rifa</a>
       </nav>
-      <div class="logo1">
-        <img class="logo" src="images/logo.png" alt="logo">
-      </div>
     </div>
     </section>
     <div class="contact1">
@@ -32,9 +33,7 @@
   <main>
     <div class="foto-cont">
       <div>
-        <img class="fotocontact" src="images/two-icecream.jpg" alt="imagen de postre ">
-
-
+        <img class="fotocontacto" src="images/two-icecream.jpg" alt="imagen de postre ">
         <h3 class="delivery">Podes pedir delivery por mail o tambien a traves de nuestro telefono</h3>
       </div>
     </div>
@@ -48,7 +47,7 @@
     </section>
   </main>
   <footer>
-    <h5>Realizado por Fernando de Elía</h5>
+    <h5 class="footer">Realizado por Fernando de Elía</h5>
   </footer>
 </body>
 
