--- a/information.html
+++ b/information.html
@@ -11,6 +11,9 @@
 
 <body>
     <header class="header5">
+        <div class="logo1">
+            <img class="logo" src="images/logo.png" alt="logo">
+        </div>
         <div class="navbar">
             <nav class="navbar1">
                 <a class="pestaña" href="./iindex.html">inicio</a>
@@ -18,16 +21,14 @@
                 <a class="pestaña" href="./contact.html">Contacto</a>
                 <a class="pestaña" href="#">informacion</a>
                 <a class="pestaña" href="./benefitstips.html">beneficios y consejos</a>
+                <a class="pestaña" href="raffle.html">rifa</a>
             </nav>
-            <div class="logo1">
-                <img class="logo" src="images/logo.png" alt="logo">
-            </div>
         </div>
         <div class="contact1">
-        <h2 class="contact">Heladeria Los andes</h2>
-        <h3 class="ordena">Informes</h3>
-    </div>
-</header>
+            <h2 class="contact">Heladeria Los Andes</h2>
+            <h3 class="ordena">Informes</h3>
+        </div>
+    </header>
     <main>
         <h4 class="detalle">detalle semanal</h4>
         <div class="layout">
