--- a/aboutus.html
+++ b/aboutus.html
@@ -11,6 +11,9 @@
 
 <body>
     <header>
+        <div class="logo1">
+            <img class="logo" src="./images/logo.png" alt="logo">
+        </div>
         <div class="navbar">
             <nav class="navbar1">
                 <a class="pestaña" href="./iindex.html">Inicio</a>
@@ -18,13 +21,11 @@
                 <a class="pestaña" href="./contact.html">Contacto</a>
                 <a class="pestaña" href="./information.html">informacion</a>
                 <a class="pestaña" href="./benefitstips.html">beneficios y consejos</a>
+                <a class="pestaña" href="./raffle.html">rifa</a>
             </nav>
-            <div class="logo1">
-                <img class="logo" src="./images/logo.png" alt="logo">
-            </div>
         </div>
         <div class="titulo1">
-            <h2 class="sobre">Sobre nosotros</h2>
+            <h2 class="titulo">Sobre nosotros</h2>
         </div>
     </header>
     <main>
