--- a/iindex.html
+++ b/iindex.html
@@ -11,17 +11,20 @@
 
 <body>
     <header>
-        <div class="navbar">
-            <nav class="navbar1">
-                <a class="pestaña" href="#">inicio</a>
-                <a class="pestaña" href="./aboutus.html">Nosotros</a>
-                <a class="pestaña" href="./contact.html">Contacto</a>
-                <a class="pestaña" href="./information.html">informacion</a>
-                <a class="pestaña" href="./benefitstips.html">beneficios y consejos</a>
-            </nav>
+        <section>
             <div class="logo1">
                 <img class="logo" src="images/logo.png" alt="logo">
             </div>
+            <div class="navbar">
+                <nav class="navbar1">
+                    <a class="pestaña" href="#">inicio</a>
+                    <a class="pestaña" href="./aboutus.html">Nosotros</a>
+                    <a class="pestaña" href="./contact.html">Contacto</a>
+                    <a class="pestaña" href="./information.html">informacion</a>
+                    <a class="pestaña" href="./benefitstips.html">beneficios y consejos</a>
+                    <a class="pestaña" href="./raffle.html">rifa</a>
+                </nav>
+        </section>
         </div>
         <section class="titulo1">
             <div class="subtitulo">
